# PodForge

./: .env.example  .gitignore  .ruff.toml  README.md  app.py  app_remote.py  pyproject.toml  pytest.ini  requirements.txt  requirements_hf.txt
.github/workflows/: ci.yml
backend/: __init__.py  drama_parser.py  hf_tts.py  main.py  tts_client.py  voice_manager.py
colab/: voxcpm_server.ipynb  voxcpm_server.py  voxcpm_server_kaggle.ipynb
docs/superpowers/plans/: 2026-05-30-podforge-hfspace-deploy.md
docs/superpowers/specs/: 2026-05-30-podforge-hfspace-design.md
examples/: customer_service.txt  demo_drama.txt  fairy_tale.txt  news_broadcast.txt  podcast_3hosts.txt
frontend/: eslint.config.mjs  next.config.ts
frontend/app/: page.tsx
frontend/components/: AudioPlayer.tsx  CloudTTSPanel.tsx  EmotionPicker.tsx  ProgressTracker.tsx  ScriptEditor.tsx  VoicePanel.tsx
frontend/lib/: api.ts  ws.ts
scripts/: generate.py
tests/: test_drama_parser.py  test_hf_tts.py  test_tts_config.py  test_voice_manager.py
