[project]
name = "podforge"
version = "0.1.0"
description = "Script in, Podcast out. AI-powered multi-character audio drama generator built on VoxCPM2."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "soundfile>=0.12.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
tts = [
    "voxcpm>=2.0.0",
    "torch>=2.5.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[project.scripts]
podforge = "scripts.generate:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
